# ChangeLog for media-sound/clementine
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Jul 2010; Nikoli <nikoli@lavabit.com> clementine-0.4.2.ebuild,
  clementine-9999.ebuild:
  fixed projectm dep

  11 Jul 2010; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild:
  building without gstreamer is fixed, cosmetics

  11 Jul 2010; Nikoli <nikoli@lavabit.com> -clementine-0.3.99.ebuild:
  remove 0.4 RC

*clementine-0.4.2 (11 Jul 2010)

  11 Jul 2010; Nikoli <nikoli@lavabit.com> +clementine-0.4.2.ebuild:
  add 0.4.2

*clementine-0.3.99 (25 Jun 2010)

  25 Jun 2010; Nikoli <nikoli@lavabit.com> +clementine-0.3.99.ebuild:
  add 0.4 RC1

  25 Jun 2010; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild:
  gstreamer is default, fixed vlc and phonon deps, cosmetics

  12 Jun 2010; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild:
  upstream now supports LINGUAS

*clementine-9999 (11 Jun 2010)

  11 Jun 2010; Nikoli <nikoli@lavabit.com> +clementine-9999.ebuild,
  +metadata.xml:
  Initial live ebuild
