@@ -1,5 +1,5 @@
 DIST clementine-0.4.2.tar.gz 4670893 RMD160 e6da4be1f4d6d1f193abe0f2b7afa1270e7fc4cc SHA1 5bbec64089226d7ebf1719fe693990407a3b5a59 SHA256 07934347ea4922997524fca3bc5895d7accd52cf22f987922e814769e66996be
-EBUILD clementine-0.4.2.ebuild 2127 RMD160 87993323aa034074db217895cde2ad3ca4819f3b SHA1 b74f23fb3bd0bdbd5a9089470ee90bcc7ea8b60a SHA256 eb63b5af9e2f1cf4b6b73440f7c879b36bd14a946650c24f4c740eee9e150e3b
-EBUILD clementine-9999.ebuild 2490 RMD160 e0599674f41ee18d0003938b61f89bca606fa2d3 SHA1 51f101a4f5a59e3170f8ef8b22df300dc3e33573 SHA256 fc3f73812b7e322a170857d7947cfda503605585cbbe57a6ebf9c71a21c5c6e9
-MISC ChangeLog 1046 RMD160 11e5797fdc343ff78be1358137da7e3c7f7b281f SHA1 607c94a5cb5bcb85cd969fd48238dc1c08841afb SHA256 d86509850993f14451981a7cc889182033dbf8cba0bff62f75b275e96d9fd55e
+EBUILD clementine-0.4.2.ebuild 2189 RMD160 295eb69564bea2fd4f3d32ce4be813a80af04283 SHA1 4c0f60ca1293c987169e54ff4517b638b8f0c69c SHA256 8bb79743e40303042f50855ad8878bf931b7041ca8387c15100b1062db0328dc
+EBUILD clementine-9999.ebuild 2559 RMD160 d69cbe271fddfaa67c9e78a48c2e9a9324809ec2 SHA1 8916d81a3460c9bb6c5012ac877a9e1cedb8fec0 SHA256 095d6b78550140fdaea35bf67dce9df8251a5d43838348715efa94082fa3904d
+MISC ChangeLog 1171 RMD160 1361813957ebdeef12c42f3a398cad86431bb1a8 SHA1 509d2f92ea5bcac286dbf2b742f6925bae6f3058 SHA256 e6e3742dec6941814089f3468c5661efdbad82b7676a5404db07c926f2a8e97f
 MISC metadata.xml 366 RMD160 57edb246583996360d3f18a67246f9edf7d4698b SHA1 a0b336051f74e47a50e4978d038e9ebc8a4c55da SHA256 d814214186c00863c84944669888779fd113f4a37692134522b5d289835e9666
