@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Sep 2010; Nikoli <nikoli@lavabit.com> clementine-0.4.2.ebuild,
+  clementine-9999.ebuild:
+  fix deps, linguas cosmetics
+
   11 Jul 2010; Nikoli <nikoli@lavabit.com> clementine-0.4.2.ebuild,
   clementine-9999.ebuild:
   fixed projectm dep
